PPNA-3924 gap fix 4

--- a/_static/css/custom_1626336655663.css
+++ b/_static/css/custom_1626336655663.css
@@ -679,7 +679,7 @@ a.link-large {
 }
 
 
-@media (max-width:794px) and (min-width:768px) {
+@media (max-width:794px) and (min-width:769px) {
     .popular-links-el:nth-child(2) {
         order: 3;
     }
